--- a/pom.xml
+++ b/pom.xml
@@ -51,4 +51,8 @@
   <!--build>
     <finalName>BibliotecaImpressos</finalName>
   </build-->
+   <properties>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
+   </properties>
 </project>
