--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <version>2.12.4</version>
         <configuration>
           <skipTests>false</skipTests>
+          <testFailureIgnore>true</testFailureIgnore>
         </configuration>
       </plugin>
        <plugin>
