--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
           <testFailureIgnore>true</testFailureIgnore>
         </configuration>
       </plugin>
-       <plugin>
+       <!--plugin>
         <groupId>com.github.searls</groupId>
         <artifactId>jasmine-maven-plugin</artifactId>
         <version>2.2</version>
@@ -58,7 +58,7 @@
             </goals>
           </execution>
         </executions>
-      </plugin>
+      </plugin-->
     </plugins>
   </build>
   <!--build>
